tests/ui/attributes/unix_sigpipe/unix_sigpipe-str-list.rs
#![feature(unix_sigpipe)]

#[unix_sigpipe("sig_dfl")] //~ error: malformed `unix_sigpipe` attribute input
fn main() {}
